package Java_PP.indirecao;

class ConectorBluetooth implements Conector {
    @Override
    public void conectar() {
        System.out.println("Conectado via Bluetooth.");
    }
}
